assets/sass/newStyles/_projects.scss
.b-projects {

    .project-item {
        cursor: move;
        cursor: -webkit-grab;
        cursor: grab;
        height: 337px;
        @media (max-width: $small) {
            height: 400px;
        }

        .type {
            color: #a7a7a7;
            margin-bottom: 15px;
            text-transform: uppercase;
            font-size: 14px;
            line-height: 16px;
            font-family: 'geometriabold';
            @media (max-width: $small) {
                margin-bottom: 5px;
                font-size: 12px;
            }
        }

        .mobile-headline {
            display: none;
            @media (max-width: $small) {
                display: block;
                margin-bottom: 15px;
                font-family: 'geometriabold';
                padding-left: 15px;
            }
            @media (max-width: $xsmall) {
                padding-left: 15px;
            }

            .title {
                margin-bottom: 5px;
                @media (max-width: $small) {
                    font-size: 34px;
                }
                @media (max-width: $xsmall) {
                    font-size: 20px;
                }
            }

            .name {
                text-transform: uppercase;
                font-family: 'geometriabold';
                font-size: 30px;
                line-height: 36px;
                @media (max-width: $large) {
                    font-size: 20px;
                    line-height: 24px;
                }

                a {
                    color: #000;
                }
            }
        }

        & + .project-item {
            margin-top: 110px;
            @media (max-width: $large) {
                margin-top: 65px;
            }
            @media (max-width: $small) {
                margin-top: 55px;
            }
            @media (max-width: $xsmall) {
                margin-top: 30px;
            }
        }

        .item {
            line-height: normal;

            img {
                cursor: pointer;
                transition: opacity .3s ease-in-out;

                &:hover {
                    opacity: .8;
                }
            }

            &.headline {
                width: 540px;
                @media (max-width: $large) {
                    width: 390px;
                }
                @media (max-width: $small) {
                    display: none;
                }

                .title {
                    font-size: 50px;
                    font-family: 'geometriabold';
                    margin-bottom: 15px;
                    @media (max-width: $large) {
                        font-size: 34px;
                        margin-bottom: 10px;
                    }
                    @media (max-width: $small) {
                        font-size: 20px;
                    }
                }

                .date {
                    font-size: 14px;
                    font-family: 'geometriabold';
                    @media (max-width: $xsmall) {
                        font-size: 12px;
                    }
                }
            }

            .name {
                font-family: 'geometriabold';
                font-size: 30px;
                line-height: 36px;
                @media (max-width: $large) {
                    font-size: 20px;
                    line-height: 24px;
                }
            }

            .project-date {
                font-size: 14px;
                color: #d8d8d8;
            }

            &.goto {
                text-transform: uppercase;
                font-family: 'geometriabold';
                font-size: 24px;
                padding-top: 110px;
                padding-left: 60px;

                a {
                    color: #000;
                    text-decoration: none;
                }
            }
        }

        .last {
            background: url(../../images/author/goto.svg) no-repeat center;
            width: 220px;
            height: 300px;
            display: inline-block;
        }
    }
}

.project-page {

    .b-projects {
        margin-bottom: 170px;
        @media (max-width: $small) {
            margin-bottom: 140px;
            padding-left: 30px;
        }
        @media (max-width: $xsmall) {
            margin-bottom: 85px;
            padding-left: 20px;
        }

        .project-item {
            height: 405px;

            .item {
                width: 430px;
                @media (max-width: $large) {
                    width: auto;
                }
                @media (max-width: $small) {
                    max-width: 320px;
                }
                @media (max-width: $xsmall) {
                    max-width: 200px;
                }

                &.headline {
                    padding-left: 15px;
                }

                .image {
                    width: 100%;
                    margin-bottom: 12px;
                    height: 220px;
                    overflow: hidden;
                    @media (max-width: $large) {
                        height: 220px;
                    }
                    @media (max-width: $small) {
                        height: 220px;
                    }
                    @media (max-width: $xsmall) {
                        height: 140px;
                    }
                }

                &.project-headline {
                    padding-left: 380px;
                    width: 930px;
                    @media (max-width: $large) {
                        width: 410px;
                        padding-left: 30px;
                    }

                    a {
                        color: #000;
                    }
                }
            }
        }
    }
}

.author-page {

    .b-projects {

        .owl-stage {

            .owl-item:first-child {

                .item {
                    padding-left: 12em;
                    @media(max-width: $large) {
                        padding-left: 6em;
                    }
                }
            }
        }
    }
}

